Recycler view de comida-ingrediente creados pero solo mostrando el de comida

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorLabelOrange">#f9814e</color>
+    <color name="colorLabelOrangeLight">#ffbfa3</color>
+    <color name="colorButtonBlack">#5b5857</color>
 </resources>
