--- a/app/src/main/res/layout/activity_crear_comida.xml
+++ b/app/src/main/res/layout/activity_crear_comida.xml
@@ -8,7 +8,7 @@
     tools:context=".actividades.vendedor.CrearComidaActivity">
 
     <TextView
-        android:id="@+id/lbl_crear_comida"
+        android:id="@+id/lbl_crear_comida_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -34,8 +34,8 @@
         android:text="Nombre"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/lbl_crear_comida"
-        app:layout_constraintTop_toBottomOf="@+id/lbl_crear_comida" />
+        app:layout_constraintEnd_toEndOf="@+id/lbl_crear_comida_title"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_crear_comida_title" />
 
     <TextView
         android:id="@+id/lbl_descripcion_comida"
