--- a/app/src/main/res/layout/activity_crear_orden.xml
+++ b/app/src/main/res/layout/activity_crear_orden.xml
@@ -4,6 +4,147 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fon_background_gen"
     tools:context=".actividades.comprador.CrearOrdenActivity">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Total"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_total_crear_orden"
+        app:layout_constraintEnd_toStartOf="@+id/txt_total_crear_orden"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.388" />
+
+    <EditText
+        android:id="@+id/txt_total_crear_orden"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        tools:layout_editor_absoluteY="55dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="10dp"
+        android:text="Crear Orden"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/txt_ubicacion_crear_orden"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/txt_total_crear_orden"
+        app:layout_constraintHorizontal_bias="0.833"
+        app:layout_constraintStart_toStartOf="@+id/txt_total_crear_orden"
+        app:layout_constraintTop_toBottomOf="@+id/txt_total_crear_orden" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:text="Ubicacion"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_ubicacion_crear_orden"
+        app:layout_constraintEnd_toStartOf="@+id/txt_ubicacion_crear_orden"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txt_ubicacion_crear_orden" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Costo Delivery"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_costo_delivery_crear_orden"
+        app:layout_constraintEnd_toStartOf="@+id/txt_costo_delivery_crear_orden"
+        app:layout_constraintTop_toTopOf="@+id/txt_costo_delivery_crear_orden" />
+
+    <EditText
+        android:id="@+id/txt_costo_delivery_crear_orden"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/txt_ubicacion_crear_orden"
+        app:layout_constraintStart_toStartOf="@+id/txt_ubicacion_crear_orden"
+        app:layout_constraintTop_toBottomOf="@+id/txt_ubicacion_crear_orden" />
+
+    <EditText
+        android:id="@+id/txt_fecha_entrega_crear_orden"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="5dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/txt_costo_delivery_crear_orden"
+        app:layout_constraintStart_toStartOf="@+id/txt_costo_delivery_crear_orden"
+        app:layout_constraintTop_toBottomOf="@+id/txt_costo_delivery_crear_orden" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Fecha de \Entrega"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_fecha_entrega_crear_orden"
+        app:layout_constraintEnd_toStartOf="@+id/txt_fecha_entrega_crear_orden"
+        app:layout_constraintTop_toTopOf="@+id/txt_fecha_entrega_crear_orden" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Costo de Entrega"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_costo_entrega_crear_orden"
+        app:layout_constraintEnd_toStartOf="@+id/txt_costo_entrega_crear_orden"
+        app:layout_constraintTop_toTopOf="@+id/txt_costo_entrega_crear_orden" />
+
+    <EditText
+        android:id="@+id/txt_costo_entrega_crear_orden"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/txt_fecha_entrega_crear_orden"
+        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_escogidos_comprador"
+        android:layout_width="368dp"
+        android:layout_height="255dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="307dp" />
 </android.support.constraint.ConstraintLayout>
