--- a/app/src/main/res/layout/activity_seleccionar_items.xml
+++ b/app/src/main/res/layout/activity_seleccionar_items.xml
@@ -5,28 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fon_background_gen"
-    tools:context=".actividades.comprador.SeleccionarItemsActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_comidas_disponibles"
-        android:layout_width="368dp"
-        android:layout_height="481dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".actividades.comprador.SeleccionarItemsActivity"
+    tools:layout_editor_absoluteY="25dp">
 
     <Button
         android:id="@+id/btn_aceptar_seleccionar_items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="2dp"
         android:text="Aceptar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recycler_view_comidas_disponibles"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_comidas_disponibles" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_comidas_disponibles"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginTop="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_aceptar_seleccionar_items"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
