--- a/app/src/main/res/layout/activity_crear_orden.xml
+++ b/app/src/main/res/layout/activity_crear_orden.xml
@@ -12,50 +12,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
         android:text="Total"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_total_crear_orden"
-        app:layout_constraintEnd_toStartOf="@+id/txt_total_crear_orden"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.388" />
-
-    <EditText
-        android:id="@+id/txt_total_crear_orden"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        tools:layout_editor_absoluteY="55dp" />
+        app:layout_constraintBottom_toTopOf="@+id/txt_ubicacion_crear_orden"
+        app:layout_constraintEnd_toStartOf="@+id/txt_total_comidas_crear_orden"
+        app:layout_constraintTop_toTopOf="@+id/txt_total_comidas_crear_orden"
+        app:layout_constraintVertical_bias="0.4" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:text="Crear Orden"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/txt_ubicacion_crear_orden"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/txt_total_crear_orden"
-        app:layout_constraintHorizontal_bias="0.833"
-        app:layout_constraintStart_toStartOf="@+id/txt_total_crear_orden"
-        app:layout_constraintTop_toBottomOf="@+id/txt_total_crear_orden" />
+        app:layout_constraintEnd_toEndOf="@+id/txt_total_comidas_crear_orden"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/txt_total_comidas_crear_orden"
+        app:layout_constraintTop_toBottomOf="@+id/txt_total_comidas_crear_orden" />
 
     <TextView
         android:id="@+id/textView6"
@@ -63,12 +56,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
         android:text="Ubicacion"
         app:layout_constraintBottom_toBottomOf="@+id/txt_ubicacion_crear_orden"
         app:layout_constraintEnd_toStartOf="@+id/txt_ubicacion_crear_orden"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txt_ubicacion_crear_orden" />
+        app:layout_constraintTop_toTopOf="@+id/txt_ubicacion_crear_orden"
+        app:layout_constraintVertical_bias="0.631" />
 
     <TextView
         android:id="@+id/textView7"
@@ -83,9 +75,8 @@
 
     <EditText
         android:id="@+id/txt_costo_delivery_crear_orden"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/txt_ubicacion_crear_orden"
@@ -94,13 +85,13 @@
 
     <EditText
         android:id="@+id/txt_fecha_entrega_crear_orden"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/txt_costo_delivery_crear_orden"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/txt_costo_delivery_crear_orden"
         app:layout_constraintTop_toBottomOf="@+id/txt_costo_delivery_crear_orden" />
 
@@ -128,23 +119,45 @@
         app:layout_constraintEnd_toStartOf="@+id/txt_costo_entrega_crear_orden"
         app:layout_constraintTop_toTopOf="@+id/txt_costo_entrega_crear_orden" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_escogidos_comprador"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_costo_entrega_crear_orden" />
+
     <EditText
         android:id="@+id/txt_costo_entrega_crear_orden"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/txt_fecha_entrega_crear_orden"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_fecha_entrega_crear_orden" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_escogidos_comprador"
-        android:layout_width="368dp"
-        android:layout_height="255dp"
+    <EditText
+        android:id="@+id/txt_total_comidas_crear_orden"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.721"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="307dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.081" />
 </android.support.constraint.ConstraintLayout>
