Crear orden por implementar el guardado a la DB

--- a/app/src/main/res/layout/activity_crear_orden.xml
+++ b/app/src/main/res/layout/activity_crear_orden.xml
@@ -122,15 +122,16 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_escogidos_comprador"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_costo_entrega_crear_orden" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_costo_entrega_crear_orden"
+        app:layout_constraintVertical_bias="0.194" />
 
     <EditText
         android:id="@+id/txt_costo_entrega_crear_orden"
@@ -160,4 +161,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.081" />
+
+    <Button
+        android:id="@+id/btn_crear_orden"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:text="Crear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_view_escogidos_comprador"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
