Ver ordenes por estado en el comprador listo falta push notification

--- a/app/src/main/res/layout/activity_ver_ordenes.xml
+++ b/app/src/main/res/layout/activity_ver_ordenes.xml
@@ -4,6 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fon_background_gen"
     tools:context=".actividades.comprador.VerOrdenesActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_ver_ordenes_comprador"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
